--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,12 @@
   <link rel="text" href="/src/styles.css">
 </head>
 <body>
+  <app-navi></app-navi>
   <div class="container">
-    <app-navi></app-navi>
+  
     
     <div class="col-md-12">
-      <app-profile></app-profile>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </body>
