--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,33 +8,99 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
- 
+      
+      <div class="container">
+
+        <div class="bubbles-container">
+          <svg class="bubbles" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 701 1024" style="overflow: visible;">
+      
+              <g class="bubbles-large" stroke-width="7">
+                  <g>
+                      <g transform="translate(10 940)">
+                          <circle cx="35" cy="35" r="35"/>
+                      </g>
+                  </g>
+                  <g>
+                      <g transform="translate(373 940)">
+                          <circle cx="35" cy="35" r="35"/>
+                      </g>
+                  </g>
+                  <g>
+                      <g transform="translate(408 940)">
+                          <circle cx="35" cy="35" r="35"/>
+                      </g>
+                  </g>
+                  <g>
+                      <g transform="translate(621 940)">
+                          <circle cx="35" cy="35" r="35"/>
+                      </g>
+                  </g>
+                  <g>
+                      <g transform="translate(179 940)">
+                          <circle cx="35" cy="35" r="35"/>
+                      </g>
+                  </g>
+              </g>
+      
+              <g class="bubbles-small" stroke-width="4">
+                  <g>
+                      <g transform="translate(147 984)">
+                          <circle cx="15" cy="15" r="15"/>
+                      </g>
+                  </g>
+                  <g>
+                      <g transform="translate(255 984)">
+                          <circle cx="15" cy="15" r="15"/>
+                      </g>
+                  </g>
+                  <g>
+                      <g transform="translate(573 984)">
+                          <circle cx="15" cy="15" r="15"/>
+                      </g>
+                  </g>
+                  <g>
+                      <g transform="translate(429 984)">
+                          <circle cx="15" cy="15" r="15"/>
+                      </g>
+                  </g>
+                  <g>
+                      <g transform="translate(91 984)">   
+                          <circle cx="15" cy="15" r="15"/>
+                      </g>
+                  </g>
+                  <g>
+                      <g transform="translate(640 984)">
+                          <circle cx="15" cy="15" r="15"/>
+                      </g>
+                  </g>
+                  <g>
+                      <g transform="translate(321 984)">
+                          <circle cx="15" cy="15" r="15"/>
+                      </g>
+                  </g>
+                  <g>
+                      <g transform="translate(376 984)">
+                          <circle cx="15" cy="15" r="15"/>
+                      </g>
+                  </g>
+                  <g>
+                      <g transform="translate(376 984)">
+                          <circle cx="15" cy="15" r="15"/>
+                      </g>
+                  </g>
+                  <g>
+                      <g transform="translate(497 984)">
+                          <circle cx="15" cy="15" r="15"/>
+                      </g>
+                  </g>
+              </g>
+      
+          </svg>
+        </div>
+        
+        <h1>Broball</h1>
+      
+      </div>
 
       </div>
     
