--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -22,12 +22,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="/profiles">Profile</a>
               </li>
-              <!-- <app-cart-summary></app-cart-summary> -->
              
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn btn-success" type="submit" routerLink="/startball">Lets Start</button>
             </form>
           </div>
         </div>
