--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <link rel="text" href="/src/app/components/profile/profile.component.css">
+    <link rel="text/html" href="/src/app/components/profile/profile.component.css">
     
 </head>
     <body>
@@ -20,7 +20,7 @@
                         <div class="card" >
                             <div class="card-body">
                                 <div class="d-flex flex-column align-items-center text-center">
-                                   <img src="./shiba.jpg" class="yuvarlak">
+                                   <img src="/src/assets/images/shiba.jpg" class="yuvarlak">
                                     <div class="mt-3">
                                         <h4>Taha Toy</h4>
                                         <p class="text-secondary mb-1">Full Stack Developer</p>
@@ -159,7 +159,7 @@
       <div class="card h-100">
         <div class="card-body">
           <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">League :: </i>  Gold 3</h6>
-            <img src="./shiba.jpg" alt="gold" width="500" height="auto">
+            <img src="/src/assets/images/shiba.jpg" alt="gold" width="500" height="auto">
             <hr>
             <small>League Positions</small>
             <div class="mb-3" style="height: 5px">
