--- a/src/app/components/startball/startball.component.html
+++ b/src/app/components/startball/startball.component.html
@@ -16,6 +16,13 @@
                     <div class="card">
                         <div class="card-body">
                             <img src="/src/broball.gif" alt="">
+                            <table class="striped">
+                                <ul>
+                                    <li>
+                                        <h5>This is broball gif bro</h5>
+                                    </li>
+                                </ul>
+                            </table>
                         </div>
 
                     </div>
