--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -20,7 +20,7 @@
                         <div class="card" >
                             <div class="card-body">
                                 <div class="d-flex flex-column align-items-center text-center">
-                                   <img src="/src/assets/images/shiba.jpg" class="yuvarlak">
+                                        <img  class="yuvarlak"  src="~/src/assets/images/shiba.jpg">
                                     <div class="mt-3">
                                         <h4>Taha Toy</h4>
                                         <p class="text-secondary mb-1">Full Stack Developer</p>
@@ -32,6 +32,7 @@
                             </div>
                           </div>
                         </div>
+                       
 
                          <!--Profile Section---------------------------------------------- -->
                         <div class="col-md-12">
@@ -132,6 +133,7 @@
         <div class="card-body">
           <h6 class="d-flex align-items-center mb-3">Skills</h6>
           <small>Shot</small>
+
           <div class="progress mb-3" style="height: 5px">
             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
