--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,16 +8,31 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>Broballl</title>
   <link rel="text" href="/src/styles.css">
+  
 </head>
 <body>
   <app-navi></app-navi>
 
-  <div class="container">
-  
-    
-    <div class="col-md-12">
+  <div class="container-fluid">
+  <div class="row">
+    <div class="col-md-2">
+      <app-sidebar></app-sidebar>
+    </div>
+    <div class="col-md-8">
       <router-outlet></router-outlet>
     </div>
+
+    <!-- <div class="col-md-2">
+      <app-profile></app-profile>
+    </div>
+     -->
+
+  </div>
+  
+ 
+ 
+ 
   </div>
 </body>
 </html>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRVpm-AWAW2SHHIpLoE8Gotm7mJKLbgak&callback=initMap"></script>
