--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,39 +1,8 @@
-body {margin:0;padding:0;}
 
-#hero {
-  position:relative;
+.background{
+  background-color: bisque;
 }
 
-#hero video {
-  height:100vh;
-  width:100%;
-  background-position:absolute;
-  z-index:10;
-  object-fit:cover;
-}
-
-#hero .content {
-  background:rgba(0,0,0,0.5);
-  height:100%;
-  width:100%;
-  z-index:20;
-  position:absolute;
-  top:0;
-  left:0;
-  text-align:center;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-#hero .content h1 {
-  color:#FFF;
-  font-family:Arial,sans-serif;
-}
-
-#hero .content p {
-  font-size:18px;
-  color:#FFF;
-  font-family:Arial,sans-serif;
+.h6{
+  font-size: 150px;
 }
