--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-success bg-light">
+      <!-- <style type="text/css">
+      .navbar {
+      width: 100%;
+      position: fixed;
+      color: black;
+      
+      z-index: 2;
+    }
+  </style> -->
         <div class="container-fluid">
           <a class="navbar-brand" href="/home">Broball</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,11 +33,33 @@
               <li>
                 <a class="nav-link" href="/register">Register</a>
               </li>
+              <li>
+                <a class="nav-link" href="/startball">Lets Start</a>
+              </li>
            
             </ul>
-            <form class="d-flex">
+            <!--<form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-success" type="submit" routerLink="/startball">Lets Start</button>
+            </form>-->
+            <form class="d-flex">
+             
+                    <img class="yuvarlak" src="assets/images/shiba.jpg" alt="" style="margin-right: 20px;">
+                    <div class="dropdown">
+                      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" style="margin-top:5px;" data-bs-toggle="dropdown" aria-expanded="false">
+                        Tolga Budanoğlu
+                      </a>
+                    
+                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <li><a class="dropdown-item" href="/profiles">Profil</a></li>
+                        <li><a class="dropdown-item" href="/startball">Hadi Maça</a></li>
+                        <li><a class="dropdown-item" href="/sss">sık sorulan sorular</a></li>
+                        <li><a class="dropdown-item" href="/sss">Bize Sorun</a></li>
+                        <li><a class="dropdown-item" href="/login">Çıkış yap</a></li>
+                      </ul>
+                    </div>                 
+                
+              
             </form>
           </div>
         </div>
