--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,5 +1,6 @@
 body{
     margin-top:20px;
+    margin-left: 50px;
     color: #1a202c;
     text-align: left;
     /* background: url(shiba.jpg) no-repeat center center fixed;  */
