--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -20,7 +20,7 @@
                         <div class="card" >
                             <div class="card-body">
                                 <div class="d-flex flex-column align-items-center text-center">
-                                        <img  class="yuvarlak"  src="~/src/assets/images/shiba.jpg">
+                                        <img  class="yuvarlak"  src="assets/images/shiba.jpg">
                                     <div class="mt-3">
                                         <h4>Taha Toy</h4>
                                         <p class="text-secondary mb-1">Full Stack Developer</p>
@@ -161,7 +161,7 @@
       <div class="card h-100">
         <div class="card-body">
           <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">League :: </i>  Gold 3</h6>
-            <img src="/src/assets/images/shiba.jpg" alt="gold" width="500" height="auto">
+            <img src="assets/images/shiba.jpg" alt="gold" width="500" height="auto">
             <hr>
             <small>League Positions</small>
             <div class="mb-3" style="height: 5px">
