--- a/src/app/components/startball/startball.component.html
+++ b/src/app/components/startball/startball.component.html
@@ -15,14 +15,11 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-body">
-                            <img src="/src/broball.gif" alt="">
-                            <table class="striped">
-                                <ul>
-                                    <li>
-                                        <h5>This is broball gif bro</h5>
-                                    </li>
-                                </ul>
-                            </table>
+                            <agm-map [latitude]="lat" [longitude]="lng">
+                                <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+                              </agm-map>
+
+                              
                         </div>
 
                     </div>
